fix: name change

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template-vuetify-offcial",
+  "name": "template-vuetify-home",
   "version": "0.0.0",
   "private": true,
   "type": "module",
