--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "template-vuetify-home",
-  "version": "0.0.0",
+  "name": "pay-web",
+  "version": "0.0.1",
   "private": true,
   "type": "module",
   "scripts": {
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "pinia": "^2.1.7",
+    "qrcode.vue": "^3.4.1",
     "vue": "^3.4.21",
     "vuetify": "^3.5.16"
   },
